# Ultrafoot

./: .gitignore  AGENTS.md  README.md  _test_escudo.py  build_exe.py  build_sidecar.py  config.py  desktop_app.py  index.html  index_backup_pre_eafc.html  license_status.json  requirements.txt  server.py  test_launch.ps1  test_tauri.ps1  user_settings.json
conf_estadual/: AC.ces  AL.ces  AM.ces  AP.ces  BA.ces  CE.ces  DF.ces  ES.ces  GO.ces  MA.ces  MG.ces  MS.ces  MT.ces  PA.ces  PB.ces  PE.ces  PI.ces  PR.ces  RJ.ces  RN.ces  RO.ces  RR.ces  RS.ces  SC.ces  SE.ces  SP.ces  TO.ces
conf_ligas_nacionais/: AFG.cfg  AFS.cfg  ALE.cfg  ARG.cfg  ARS.cfg  AUS.cfg  AUT.cfg  BEL.cfg  BOL.cfg  BRA.cfg  CAT.cfg  CHI.cfg  CHN.cfg  COL.cfg  CRO.cfg  DIN.cfg  EGI.cfg  EMI.cfg  EQU.cfg  ESC.cfg  ESP.cfg  EUA.cfg  FRA.cfg  GRE.cfg  HOL.cfg  ING.cfg  ITA.cfg  JAP.cfg  MAR.cfg  MEX.cfg  NOR.cfg  PAR.cfg  PER.cfg  POR.cfg  RUS.cfg  SER.cfg  SUE.cfg  SUI.cfg  TUR.cfg  UCR.cfg  (+2 more)
core/: __init__.py  constants.py  enums.py  exceptions.py  models.py
data/: __init__.py
docs/: RUN_AND_BUILD.md
engine/: __init__.py  match_engine.py  season_engine.py  transfer_engine.py
fantasy/: __init__.py  manager.py  models.py  scoring.py
managers/: __init__.py  competition_manager.py  game_manager.py
save_system/: __init__.py  save_manager.py
scripts/: download_flags.py  import_bid_assets.py  import_player_photos.py  optimize_assets.py  sync_branding_assets.py  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
teams/: ACV_hol.ban  (+2920 more)
(+85 files in other folders)
