[package]
name = "brasfoot-ultimate"
version = "2.0.0"
description = "Brasfoot Ultimate - Futebol Manager"
authors = ["Brasfoot Ultimate"]
edition = "2021"

[lib]
name = "brasfoot_ultimate_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
